# mini-peppol-sender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sample_invoice.json
.github/: FUNDING.yml
docs/: development.md  development_plan.md  docker-smoke-test.md  invoice-json-schema.md
openspec/: config.yaml
openspec/changes/2026-04-14-credit-note-support/: tasks.md
openspec/changes/2026-04-14-epc-qr-code/: tasks.md
openspec/changes/2026-04-14-payment-means-support/: proposal.md  tasks.md
openspec/changes/2026-04-14-pdf-visual-representation/: design.md  tasks.md
openspec/changes/2026-04-15-pdf-language/: tasks.md
openspec/changes/cli-report-and-retry/: proposal.md  tasks.md
openspec/changes/en16931-compliance/: design.md  proposal.md  tasks.md
openspec/changes/invoice-webapp/: proposal.md  tasks.md
openspec/changes/production-deployment/: design.md  proposal.md  tasks.md
openspec/changes/test-suite/: design.md  proposal.md  tasks.md
openspec/specs/invoice-validation/: spec.md
openspec/specs/pdf-rendering/: spec.md
peppol_sender/: __init__.py  api.py  epc_qr.py  i18n.py  pdf.py  ubl.py  validator.py
peppol_sender/templates/: invoice.html
tests/: test_api.py  test_cli.py  test_epc_qr.py  test_i18n.py  test_pdf.py  test_ubl.py  test_validator.py  test_webapp.py
webapp/: __init__.py  app.py
webapp/static/: app.js  fonts.css  style.css
webapp/templates/: index.html
(+43 files in other folders)
