[project]
name = "peppify"
version = "0.1.0"
description = "Peppify — EN-16931 compliant UBL 2.1 invoice generator, validator, and Peppyrus access-point client with CLI and web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "xmlschema>=3.0",
    "flask>=3.0",
    "jinja2>=3.1",
    "weasyprint>=60",
    "segno>=1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "mypy>=1.15.0",
    "pre-commit>=4.2",
    "types-requests>=2.28",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the library package goes into the wheel. cli.py and webapp/ stay as
# in-repo scripts — users run them from a checkout, not from an installed entry.
packages = ["peppol_sender"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
addopts = "--cov=peppol_sender --cov-fail-under=80"
